bynkc/tests/fixtures/positive/235_held_connection/src/room.bynk
context room

type ServerFrame = { text: String }

-- A hand-written held source: a capability that produces a Connection. The real
-- source (the `from WebSocket` upgrade) arrives in slice 3; the linearity
-- discipline is identical.
capability Gateway { fn accept() -> Effect[Connection[ServerFrame]] }

service Chat from http {
  -- Receive a held connection, use it (send), then dispose it (close).
  on GET("/open") by v: Visitor () -> Effect[HttpResult[()]] given Gateway {
    let conn <- Gateway.accept()
    let _ <- conn.send(ServerFrame { text: "welcome" })
    let _ <- conn.close()
    NoContent
  }
}

agent Room {
  key id: String
  -- Held values may live in a `Map[K, Connection]` (§2.9.3).
  store conns: Map[String, Connection[ServerFrame]]

  -- A held parameter is disposed by transferring it into storage (`put`).
  on call join(u: String, conn: Connection[ServerFrame]) -> Effect[()] {
    let _ <- conns.put(u, conn)
    ()
  }

  -- `remove` removes-and-closes the stored connection.
  on call leave(u: String) -> Effect[()] {
    let _ <- conns.remove(u)
    ()
  }
}
