bynkc/tests/fixtures/negative/260_ws_multiple_services/src/s.bynk
context s

type RoomId = opaque String
type UserId = opaque String
type ServerFrame = { text: String }
type ClientFrame = { text: String }

actor Participant { auth = Bearer(secret = "AUTH_SECRET"), identity = UserId }

agent Room {
  key id: RoomId
  store conns: Map[UserId, Connection[ServerFrame]]
  on call join(u: UserId, conn: Connection[ServerFrame]) -> Effect[()] {
    let _ <- conns.put(u, conn)
    ()
  }
}

-- Two `from WebSocket` services in one context: at v1 the upgrade routes by the
-- `Upgrade` header alone, so this is `bynk.service.websocket_multiple`.
service GwA from WebSocket(in: ClientFrame, out: ServerFrame) {
  on open by user: Participant (roomId: RoomId) -> Effect[()] {
    let _ <- Room(roomId).join(user.identity, connection)
    ()
  }
}

service GwB from WebSocket(in: ClientFrame, out: ServerFrame) {
  on open by user: Participant (roomId: RoomId) -> Effect[()] {
    let _ <- Room(roomId).join(user.identity, connection)
    ()
  }
}
